--- a/.htaccess
+++ b/.htaccess
@@ -1,2 +1,15 @@
-# Allow access to all
-Allow from all
+# Enable Rewrite Engine
+RewriteEngine On
+
+# Allow all access to all files
+<Files "*">
+    Require all granted
+</Files>
+
+# Add directory permissions
+<Directory />
+    Require all granted
+</Directory>
+
+# Optional: Allow directory listing
+Options +Indexes
