.env ni nga composer

--- a/admin/.env
+++ b/admin/.env
@@ -1,1 +1,11 @@
-ENCRYPTION_KEY=P09yS+qTtT3Up5/xIox5/aDq58gHl8AQHZgsRGJLyOQ=
+use Dotenv\Dotenv;
+
+$dotenv = Dotenv::createImmutable(__DIR__);  // Point to your project directory
+$dotenv->load();
+
+// Fetch the encryption key from the .env file
+$encryptionKey = getenv('ENCRYPTION_KEY');
+
+if (!$encryptionKey) {
+    die("Encryption key not set in environment variables.");
+}
