--- a/admin/.env
+++ b/admin/.env
@@ -1,6 +1,7 @@
 use Dotenv\Dotenv;
 
-$dotenv = Dotenv::createImmutable(__DIR__);  // Point to your project directory
+// Point to the correct directory where your .env file is located
+$dotenv = Dotenv::createImmutable('C:/xampp/htdocs/vpms/admin');  // Absolute path to your .env directory
 $dotenv->load();
 
 // Fetch the encryption key from the .env file
