--- a/admin/.env
+++ b/admin/.env
@@ -1,8 +1,11 @@
+<?php
+require_once __DIR__ . '/vendor/autoload.php';  // Load Composer's autoloader
+
 use Dotenv\Dotenv;
 
-// Point to the correct directory where your .env file is located
-$dotenv = Dotenv::createImmutable('C:/xampp/htdocs/vpms/admin');  // Absolute path to your .env directory
-$dotenv->load();
+// Load the .env file from the project directory
+$dotenv = Dotenv::createImmutable(__DIR__);
+$dotenv->load();  // This loads the .env file and makes variables accessible
 
 // Fetch the encryption key from the .env file
 $encryptionKey = getenv('ENCRYPTION_KEY');
@@ -10,3 +13,6 @@ $encryptionKey = getenv('ENCRYPTION_KEY');
 if (!$encryptionKey) {
     die("Encryption key not set in environment variables.");
 }
+
+// You can now use the encryption key for encryption and decryption
+echo "Encryption Key Loaded: " . $encryptionKey;
