--- a/admin/.env
+++ b/admin/.env
@@ -33,9 +33,21 @@ $qrCodeData = json_encode([
     'Model' => $randomModel,
 ]);
 
+// Debug: Display the data before encryption
+echo "<pre>";
+echo "Data to encrypt: ";
+print_r($qrCodeData);
+echo "</pre>";
+
 // Encrypt the data
 $encryptedQrCodeData = openssl_encrypt($qrCodeData, $cipher, $encryptionKey, 0, $iv);
 $encryptedQrCodeData = base64_encode($encryptedQrCodeData . "::" . base64_encode($iv));  // Base64 encode the encrypted data and IV
+
+// Debug: Display the encrypted data
+echo "<pre>";
+echo "Encrypted Data: ";
+print_r($encryptedQrCodeData);
+echo "</pre>";
 
 // Generate the QR Code with encrypted data
 $qrCodeUrl = "https://api.qrserver.com/v1/create-qr-code/?data=" . urlencode($encryptedQrCodeData) . "&size=150x150";
